--- a/peru.html
+++ b/peru.html
@@ -1,14 +1,336 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/peru.css">
     <title>Gastro Peru</title>
 </head>
+
 <body>
-    <h1>gastronomia Peruana</h1>
-    
-    
+    <h1>Gastronomia Peruana</h1>
+
+    <h2>Causa Limeña</h2>
+
+    <div class="textos">
+        <p>
+            Este plato es tradicionalmente elaborado sobre la base de papa amarilla, limón, ají amarillo, huevo cocido y
+            aceitunas negras,ingredientes a los que luego se les añadió palta para el relleno y la lechuga para la
+            decoración. Esta preparación admite diversas variantes, como causa rellena de atún, de trucha, de pollo,
+            de mariscos u otras variedades de carnes blancas. Se sirve con un ligero baño de mayonesa.
+            Además de papa amarilla, la masa de la causa puede ser elaborada con pallares verdes o yuca amarilla. <br>
+            En el antiguo Perú era preparada con papa amarilla, la cual tiene una textura suave, amasándola con ají
+            triturado; aunque también se puede elaborar con cualquier otra variedad de papa. <br>
+
+            En la época del Virreinato, entre los siglos XVI y XIX, se le agregó el limón (originario de Asia), lo que
+            devino en la forma actual tanto en su presentación como en los ingredientes utilizados. <br>
+            Existen diversas hipótesis acerca del nombre de este plato. Por un lado se ha sugerido que proviene del
+            quechua Kawsay, que significa "sustento necesario" y "alimento", o "lo que alimenta", como se le llamaba
+            también a la papa. <br>
+
+            Existe otras hipótesis sobre el nombre del platillo que lo vinculan a sucesos bélicos de la historia
+            contemporánea del país andino. Aunque este plato netamente limeño ya existía desde el Virreinato, no tenía
+            una denominación específica; fue con la llegada del libertador José de San Martín que para solventar los
+            gastos de la campaña militar, en las esquinas de las calles limeñas se vendía este plato para apoyar a "la
+            causa" de la independencia; es en este contexto en que el plato ganó el nombre de "causa". Por otro
+            lado, existe la teoría que la causa fue un plato patriótico durante la Guerra del Pacífico que enfrentó al
+            Perú con su vecino país del sur, Chile. En ese entonces, las vivanderas ayudaron a la causa vendiendo este
+            plato frío. <br>
+
+            Mientras que en Lima se denomina «causa» a este plato, en Trujillo se utiliza para nombrar a cualquier plato
+            picante,aunque también se elabore la causa limeña en esta ciudad norteña y compita en fama con la de la
+            capital.
+        </p>
+    </div>
+
+    <section class="ingres">
+        <div>
+            <h3>Ingredientes </h3>
+            <ul>
+                <li>400 g de papa amarilla</li>
+                <li>250 g de pollo</li>
+                <li>250 g de mayonesa</li>
+                <li>1 apio</li>
+                <li>2 ajíes amarillos</li>
+                <li>Sal, pimienta y cilantro, a gusto</li>
+                <li>1 tomate</li>
+                <li>1 palta</li>
+                <li>1/2 cebolla colorada</li>
+                <li>1 limón</li>
+                <li>1 huevo</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="contenedor0">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+            <img src="imagenes/comidas Peruanas/causa_limena_.jpg" alt="causa" id="imagen">
+        </div>
+    </section>
+
+    <h2>Anticucho</h2>
+
+    <div class="textos">
+        <p>El anticucho es un tipo de brocheta de origen peruano, que posteriormente se volvió popular en algunos
+            países sudamericanos con diferentes variaciones. Consiste en carne y otros alimentos que se asan ensartados
+            en un pincho. Durante la época precolombina el anticucho se preparaba con trozos de carne de llama y se
+            condimentaba con hierbas aromáticas y ají. Otras versiones señalan que el plato es fruto de la interacción
+            de la tradición mora e hispánica que llegó Perú con la conquista, existiendo preparaciones a base de carne y
+            corazón de cabra en la región y demostrándose con la gran tradición española del aprovechamiento total de la
+            res (incluyendo sus vísceras). <br>
+
+            Aunque su origen se remontaría a la era precolombina, el anticucho como tal se popularizó durante la época
+            colonial, siendo uno de los platos más importantes servidos a los esclavos del antiguo Virreinato del Perú y
+            consumido regularmente por los descendientes de los primeros encomenderos. En la actualidad, este plato fue
+            llevado por la migración peruana a los distintos países como Argentina, Bolivia, Ecuador y Chile. <br>
+
+            En el Perú, el anticucho se caracteriza por el uso de corazón de res y su consumo se acentúa durante el mes
+            de octubre como parte de las tradiciones gastronómicas de las festividades del Señor de los Milagros. <br>
+            Los anticuchos se pueden rastrear en textos españoles del siglo xvi, cuando los conquistadores hispanos
+            llegaron al Perú. En esa época al anticucho se le agregaron ingredientes europeos, como la carne de res (que
+            remplazaría a la de llama u otros utilizados en la época del imperio Inca) y el ajo. Al respecto, la
+            escritora Erika Fetzer menciona que de acuerdo a la tradición los anticuchos se preparaban originalmente con
+            carne de llama y que al llegar los españoles los ensartaron en palitos a modo de brochetas, macerando la
+            carne en vino. <br>
+
+            Los españoles traficaron también con esclavos negros, que se establecieron en Lima y en la costa del sur
+            chico de la Ciudad de los Reyes del Virreinato del Perú. Estos adoptaron este plato (o lo adaptaron del que
+            ya comerían en África). <br>
+
+            En aquellos tiempos los españoles desechaban todo tipo de vísceras y se las daban como alimento a los
+            esclavos,lo cual viene en contradicción de la tradición de aprovechar las vísceras de los españoles con
+            platos extremeños como la chanfaina. <br> A ellos se debe la receta actual que nació con la necesidad de
+            tener
+            un plato atractivo, de buen aspecto y mejor sabor; específicamente se usaba el corazón de la res y se
+            maceraba con chicha. En el Perú, se mantiene la tradición, el nombre y esos ingredientes.
+        </p>
+    </div>
+
+
+
+    <section class="ingres">
+        <div>
+            <h3>Ingrediente</h3>
+            <ul>
+                <li>1 kg de corazón de res, limpio y cortado en trozos pequeños</li>
+                <li>1 taza de vinagre rojo</li>
+                <li>1 taza de cerveza negra</li>
+                <li>3 dientes de ajo, picados finamente</li>
+                <li>2 cucharadas de ají panca molido</li>
+                <li>1 cucharadita de comino molido</li>
+                <li>Sal y pimienta a gusto</li>
+                <li>Brochetas de madera remojadas en agua</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="contenedor1">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+            <img src="imagenes/comidas Peruanas/Anticucho.jpg" alt="anticucho" id="imagen">
+        </div>
+    </section>
+
+
+    <h2>Ceviche</h2>
+
+    <div class="textos">
+        <p>
+            En Perú, el cebiche o ceviche es considerado por su población como parte de la identidad nacional de este
+            país. Es un plato de amplio consumo en toda la costa peruana y además venerado como elemento central de la
+            gastronomía nacional, al punto de haber sido declarado formalmente como Patrimonio Cultural de la Nación
+            y catalogado como el plato más representativo de Perú. Su historia se remonta a épocas precolombinas.
+            Al igual que en otros países, el plato es servido en un tipo de restaurante conocido como cebichería. <br>
+
+            De acuerdo a un estudio del Banco Interamericano de Desarrollo (BID) sobre innovación en la gastronomía
+            peruana (2022), el cebiche es un ejemplo del impacto sobre la gastronomía de la cultura y de la diversidad
+            poblacional a lo largo de su territorio —en la que se conjugan pescadores, agricultores y cocineros. El
+            cebiche es uno de los platos más emblemáticos de la cocina peruana. Existe una gran diversidad de cebiches
+            entre las diferentes regiones costeras del Perú y, dentro de las mismas regiones, entre las diferentes
+            playas y caletas de pescadores. En su libro Cebiche Power, Gastón Acurio documenta los distintos matices a
+            través del recorrido por la ruta del ceviche desde Tumbes hasta Tacna. Esta gran diversidad ha motivado a
+            distintos cocineros y maestros cebicheros a crear nuevos tipos de cebiches. <br>
+            Historia: <br>
+            Además de sus antecedentes rastreables hasta la cultura moche y el Imperio incaico en el Antiguo Perú,
+            algunas hipótesis lo sitúan también en la gastronomía de los pueblos indígenas de las costas del Pacífico
+            sudamericano, en la zona del actual Perú (en las cercanías de Piura). Según fuentes históricas peruanas, el
+            cebiche se habría originado en primer lugar en la cultura Tallán, en el litoral de su actual territorio hace
+            más de dos mil años. <br>
+
+            Posteriormente, con la presencia hispánica se añadieron dos ingredientes de la costumbre culinaria
+            mediterránea: la naranja agria y la cebolla.Juan José Vega en su obra indica que las mujeres moriscas que
+            llegaron con Francisco Pizarro reunieron el jugo de naranjas agrias, el ají, el pescado y algas locales
+            derivando en un nuevo plato llamado sibech, que en lengua árabe significa comida ácida.
+        </p>
+    </div>
+
+    <section class="ingres">
+        <div>
+            <h3>ingredientes para el ceviche</h3>
+            <ul>
+                <li>150 g de filete de pescado blanco</li>
+                <li>3 langostinos</li>
+                <li>40 g de chipirones blanqueados</li>
+                <li>50 g de almejas limpias</li>
+                <li>10 g de sal</li>
+                <li>50 g de rocoto picado</li>
+                <li>30 g de cilantro picado</li>
+                <li>90 g de lima</li>
+                <li>50 g de cebolla roja en juliana fina</li>
+                <li>20 g de maíz cancha frito</li>
+            </ul>
+            <h3>ingredientes para la leche de tigre</h3>
+            <ul>
+                <li>450 g de pescado blanco</li>
+                <li>100 g de blanco de apio picado</li>
+                <li>150 g de cebolla picada</li>
+                <li>60 g de sal</li>
+                <li>600 cc de caldo de pescado blanco</li>
+                <li>1 litro de jugo de limón</li>
+                <li>1 ají limo picado o en pasta</li>
+                <li>1 tallo de cilantro</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="contenedor2">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+            <img src="imagenes/comidas Peruanas/ceviche.jpg" alt="cebiche" id="imagen">
+        </div>
+    </section>
+
+    <h2>Lomo saltado</h2>
+
+    <div class="textos">
+        <p>El lomo salteado es un plato típico de la gastronomía del Perú consistente en carne de res, arroz cocido y
+            papas fritas. Es uno de los platos más consumidos popularmente en el Perú. <br>
+            Los registros datan de fines del siglo xix, cuando se le conocía como «lomito de vaca», «lomito saltado» o
+            «lomito a la chorrillana». <br>
+
+            El plato tal como se definió en aquella época y se le conoce actualmente surge por la influencia de los
+            chinos-cantoneses, contiene la sazón y la mezcla de la cocina criolla peruana con la oriental. La
+            influencia asiática se demuestra por el uso de la técnica de cocción en sartén, ahora conocida como «lomo
+            saltado».Hay variantes introducidas en este plato, porque dependiendo del gusto, se han reemplazado unos
+            ingredientes por otros. Según explica la investigadora culinaria Gloria Hinostroza, la tardía creación de
+            este plato se debe a que el costo de la carne de res era muy caro, entonces se optaba por usar otros
+            ingredientes. "Las primeras reses llegaron al Perú en 1538 y empezaron a venderse poco a poco hasta que el
+            precio sea más módico. Es por esta razón que no hay muchos platos de la cocina peruana a base de este
+            elemento", explica. <br>
+
+            En un artículo de 2013 en el Huffington Post, el chef británico-peruano Martín Morales calificó al lomo
+            saltado como "uno de los platos más queridos del Perú" y "muestra la rica fusión de mundos antiguos y
+            nuevos. Esta mezcla jugosa de carne de res, cebollas, los tomates, la pasta de ají amarillo y la salsa de
+            soya salteada en una sartén grande (o wok) es una de las muchas contribuciones que la inmigración china
+            trajo a Perú". Explicó que "el lomo saltado es a veces conocido como un plato criollo, pero más conocido
+            como un plato peruano-chino; un plato favorito de la cocina chifa. Estas son sus verdaderas raíces".
+        </p>
+    </div>
+
+    <section class="ingres">
+        <div>
+            <h3>Ingredientes</h3>
+            <ul>
+                <li>1 cebolla roja</li>
+                <li>1 tomate</li>
+                <li>Ají amarillo, pare decorar</li>
+                <li>2 varas de cebollas de verdeo</li>
+                <li>1 diente de ajo</li>
+                <li>160 g de lomo</li>
+                <li>cilantro para decorar</li>
+                <li>2 cucharadas de vinagre de vino</li>
+                <li>1 cucharada de salsa de ostión, opcional</li>
+                <li>1 cucharada de jugo de jengibre, opcional</li>
+                <li>2 cucharadas de salsa de soja</li>
+                <li>Sal y pimienta a gusto</li>
+                <li>150 g de papas</li>
+                <li>Aceite a gusto</li>
+            </ul>
+        </div>
+    </section>
+    <section class="contenedor3">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+            <img src="imagenes/comidas Peruanas/lomo saltado.jpg" alt="lomo" id="imagen">
+        </div>
+    </section>
+
+    <h2>Aji gallina</h2>
+    <div class="textos">
+        <p>El ají de gallina es un plato típico de la gastronomía peruana, concretamente de la costa, que consiste en
+            un ají o crema espesa con pechuga de gallina deshilachada. Esta crema es servida con papas cocidas, y en
+            ocasiones con arroz blanco. Es común reemplazar la gallina por pollo. <br>
+            El plato se compone de pechuga de gallina previamente cocida y luego desmenuzada o picada a cuchillo. Se
+            prepara un sofrito de cebolla y ají amarillo (o ají mirasol), luego se agregan trozos de pan remojados en
+            caldo de gallina; el líquido se va añadiendo gradualmente para lograr el espesor necesario, también se suele
+            añadir leche evaporada. En algunas recetas lleva pecanas y queso parmesano. Se sirve junto a papas
+            cocidas y arroz blanco, y se decora con huevo cocido y aceitunas de botija. <br>
+
+            A este plato se le conoce como ají de gallina pero se prepara habitualmente con pulpa deshilachada de la
+            pechuga del pollo, sobre todo en estos tiempos donde la industria avícola cría aves por dos meses y las
+            comercializa inmediatamente para consumo humano, a diferencia de las aves de corral de pobladores con chacra
+            que críen gallinas. Otras alternativas son reemplazar la gallina por atún, camarones o huevos.
+        </p>
+    </div>
+
+    <section class="ingres">
+        <div>
+            <h3>Ingrediente</h3>
+            <ul>
+                <li>1 pechuga de pollo entera</li>
+                <li>1 litro de agua</li>
+                <li>1 sachet de Caldo en Polvo de Pollo Gourmet</li>
+                <li>2 cdas de aceite</li>
+                <li>1 cebolla picada fina</li>
+                <li>2 ajíes amarillos sin pepas</li>
+                <li>6 rebanadas de pan de molde blanco sin orilla</li>
+                <li>1 taza de leche evaporada</li>
+                <li>1 cdta de Cúrcuma Molida Gourmet</li>
+                <li>½ taza de queso parmesano rallado fino</li>
+                <li>½ taza de nueces picadas</li>
+                <li>Sal a gusto</li>
+                <li>1 Huevo</li>
+                <li>Aceitunas negras a gusto</li>
+                <li>Arroz blanco</li>
+            </ul>
+        </div>
+
+    </section>
+    <section class="contenedor4">
+        <div>
+            <div class="atras botones">
+                &#60
+            </div>
+            <div class="adelante botones">
+                &#62
+            </div>
+            <img src="imagenes/comidas Peruanas/Aji-Gallina-.jpg" alt="aji" id="imagen">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
