--- a/peru.html
+++ b/peru.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/peru.css">
+    <script src="js/peru.js"></script>
     <title>Gastro Peru</title>
 </head>
 
@@ -330,7 +331,7 @@
         </div>
     </section>
 
-
+    
 </body>
 
 </html>
