--- a/brasil.html
+++ b/brasil.html
@@ -96,9 +96,13 @@
 
         <h1 class="titu">Brigadeiros</h1>
 
-        Brigadeiro es un dulce típico de la gastronomía brasileña, creado en la década de 1940, en Río de Janeiro.<br>
+        <p>
 
-        Es común en todo el país y está presente en prácticamente todas las fiestas de cumpleaños, junto con el Cajuzinho y el Beijinho
+            Brigadeiro es un dulce típico de la gastronomía brasileña, creado en la década de 1940, en Río de Janeiro.<br>
+
+            Es común en todo el país y está presente en prácticamente todas las fiestas de cumpleaños, junto con el Cajuzinho y el Beijinho<br>
+            
+        </p>
         
         <h3>Historia</h3>
 
