--- a/formulario.html
+++ b/formulario.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="estilos/formu.css">
     <title>Correo</title>
 </head>
+
 <body>
     <div class="contenedor">
         <form onsubmit="return validar()">
             <label for="nombre">Nombre</label>
 
             <input type="text" name="nombre" id="nombre"> <br>
-            
+
             <label for="tele">telefono</label>
 
             <input type="number" name="tele" id="tele"> <br>
@@ -22,6 +24,10 @@
 
             <input type="email" name="correo" id="correo"> <br>
 
+            <label for="contraseña">contraseña</label>
+
+            <input type="text" name="contraseña" id="contraseña"> <br>
+
             <input type="submit" value="Registrarse">
 
         </form>
@@ -29,6 +35,7 @@
         <div id="resultados"></div>
     </div>
 
-    <script src="js/formu.js"></script>   
+    <script src="js/formu.js"></script>
 </body>
+
 </html>
