--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>     
     <header>
-        <button id="menu" type="submit"><img src="imagenes/iconos/menu.png" alt="menu"></button>   
+        <button id="menu"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <img src="imagenes/iconos/menu.png" alt="menu"> </a> </button> 
         <h1 class="titulo"> G a s t r o L a t i n o</h1> 
-        <button id="registro"><img src="imagenes/iconos/regi.png" alt="registro"></button>
+        <button id="registro"><a href="formulario.html"> <img src="imagenes/iconos/regi.png" alt="registro"> </a> </button>
        
     </header>
        
