--- a/formulario.html
+++ b/formulario.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="estilos/formu.css">
+    
     <title>Correo</title>
 </head>
+<nav>
+    <a href="index.html ">
+         <img src="imagenes/iconos/hogar.png" 
+         width="100px" height="100px" alt="Inicio">   
+    </a>
+    </nav>
 
 <body>
     <div class="contenedor">
@@ -16,7 +23,7 @@
 
             <input type="text" name="nombre" id="nombre"> <br>
 
-            <label for="tele">telefono</label>
+            <label for="tele">Telefono</label>
 
             <input type="number" name="tele" id="tele"> <br>
 
@@ -24,7 +31,7 @@
 
             <input type="email" name="correo" id="correo"> <br>
 
-            <label for="contraseña">contraseña</label>
+            <label for="contraseña">Contraseña</label>
 
             <input type="text" name="contraseña" id="contraseña"> <br>
 
